# PC-Optimizer

./: .gitignore  README.md  pc_optimizer.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  app.py
src/core/: admin.py  dry_run.py  executor.py  logger.py  restore_point.py  updater.py
src/features/: cleanup.py  debloat.py  hosts.py  performance.py  services.py  system_info.py  system_tools.py  uninstaller.py
src/ui/: design.py  main_window.py
src/ui/components/: collapsible.py  confirm_dialog.py  output_console.py  task_card.py  update_dialog.py
src/ui/tabs/: cleanup_tab.py  debloat_tab.py  hosts_tab.py  info_tab.py  performance_tab.py  system_tools_tab.py  uninstaller_tab.py
src/utils/: config.py
tests/: test_config.py  test_dry_run.py  test_executor.py
tools/: generate_icon.py
