[project]
name = "pc-optimizer"
version = "0.1.0"
description = "GUI app for Windows 11 maintenance and debloat tasks"
requires-python = ">=3.12"
authors = [{ name = "Rafael Carneiro Sierra" }]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
